[gd_scene load_steps=5 format=2]

[ext_resource path="res://Buttons/Dpad.tscn" type="PackedScene" id=1]
[ext_resource path="res://GamePad.gd" type="Script" id=2]
[ext_resource path="res://Buttons/SingleLetterTouchScreenButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Images/Background.png" type="Texture" id=4]

[node name="GamePad" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundTextureRect" type="TextureRect" parent="."]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Dpad" parent="." instance=ExtResource( 1 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 378.91
margin_right = 378.91
margin_bottom = 0.0

[node name="RightButtons" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -901.0
margin_top = -537.0
margin_bottom = 537.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AButton" parent="RightButtons" instance=ExtResource( 3 )]
position = Vector2( 496.235, 289.682 )

[node name="BButton" parent="RightButtons" instance=ExtResource( 3 )]
position = Vector2( 285.725, 535.659 )
button = "B"
[connection signal="input_direction_calcululated" from="Dpad" to="." method="_on_Dpad_input_direction_calcululated"]
[connection signal="button_pressed" from="RightButtons/AButton" to="." method="_on_Button_button_pressed"]
[connection signal="button_released" from="RightButtons/AButton" to="." method="_on_Button_button_released"]
[connection signal="button_pressed" from="RightButtons/BButton" to="." method="_on_Button_button_pressed"]
[connection signal="button_released" from="RightButtons/BButton" to="." method="_on_Button_button_released"]
